--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ exclude: ['README.markdown']
 permalink: ':title'
 highlighter: pygments
 safe: false
-title: 'Jargon API Document'
+title: 'Jargon API Documentation'
