--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
+/vendor/bundle
+/vendor/assets
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -14,3 +16,32 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# OS Files
+.DS_Store
+._.DS_Store
+
+# Text-editor/IDE generated files
+*.sublime-workspace
+*.sublime-project
+/.idea
+*.iml
+
+*.rbc
+*.sassc
+.sass-cache
+capybara-*.html
+.rspec
+/public/system
+/coverage/
+/spec/tmp
+**.orig
+rerun.txt
+pickle-email-*.html
+.env
+
+# these should all be checked in to normalise the environment:
+# Gemfile.lock, .ruby-version, .ruby-gemset
+
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
