--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: ruby
 cache: bundler
 rvm:
-  - 2.1.2
-bundler_args: --without production staging development
+- 2.1.2
+bundler_args: "--without production staging development"
 before_script:
-  - bundle exec rake db:create db:migrate
+- bundle exec rake db:create db:migrate
 script:
-  - bundle exec rake spec
+- bundle exec rake spec
+env:
+  global:
+    secure: N5Buh/A50nqR3tq+0wHx8CDwH/6+ADpBoRVs6QhEpWa3A2/XOnT6InrX8ScKNOW0jg2s6au/HfF0d7FwzlKfaGs3BJtGtI4LQPgKkc2qe3LL5xmrG+SRgwNB9w509n/fih6eIlEMxzh6Z+oXfU/O9zrmGl2nMRofwqrCwnauBpk=
